--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -4,8 +4,8 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  height: 60px; /* Beispielhöhe */
+  box-shadow: 0 4px 5px rgba(0,0,0,0.1);
+  height: 60px;
   display: flex;
   align-items: center;
   padding: 0 1rem;
