--- a/frontend/src/app/components/output/output.component.scss
+++ b/frontend/src/app/components/output/output.component.scss
@@ -7,6 +7,15 @@ p{
 }
 
 textarea{
-  width: 100%;
+  width: 80%;
   resize: none;
+  overflow-y: hidden;
+}
+
+clr-textarea-container {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
